src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Preferred_reading_correspondence_format__c</fullName>
        <inlineHelpText>Enter your preferred reading and correspondence format.  Note: updating this field in an application will also update your profile settings.</inlineHelpText>
        <label>Preferred Reading/Correspondence Format</label>
        <picklist>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Braille</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clear print (14 pt)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large print (16 pt)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Plain Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email HTML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Suspended__c</fullName>
        <label>Reason Suspended</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reasons_for_Wishing_to_Retire__c</fullName>
        <inlineHelpText>Enter the reasons the volunteer has given for wanting to retire as a volunteer with RNIB</inlineHelpText>
        <label>Reasons for Wishing to Retire</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Receive_Volunteer_Magazine__c</fullName>
        <inlineHelpText>Indicate here if the Volunteer Magazine should be received</inlineHelpText>
        <label>Receive Volunteer Magazine?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReferenceLastName__c</fullName>
        <description>This is used on the web Application form, to capture last name of the reference (to avoid Last Name Mandatory flag on save)</description>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <label>Reference Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referrer_Organisation__c</fullName>
        <label>Referrer Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Regions in which you are interested in Volunteering</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East of England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire/Humber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sight impaired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Severely sight impaired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <inlineHelpText>To be completed by applicants applying for roles in Northern Ireland only</inlineHelpText>
        <label>Religion</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer not to say</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am a member of the Protestant Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am a member of the Roman Catholic Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am a member of neither the Protestant nor Roman Catholic Community</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_to_Retire__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the Volunteer has contacted you and wishes to retire as a Volunteer.  This request will be attended to by GVT</inlineHelpText>
        <label>Request to Retire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Number__c</fullName>
        <description>This is a human readable unique reference number for contact records to be used in the Ascent Integration</description>
        <displayFormat>C-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>SFDC Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sight_Status__c</fullName>
        <label>Sight Status</label>
        <picklist>
            <picklistValues>
                <fullName>Severely sight impaired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sight impaired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deafblind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sighted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Ability to engage with older people</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ability to engage with young people</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Able to work on your own initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confident people skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confident public Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enthusiastic and confident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good administrative skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good IT skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good listening and communication skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good organisational skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good Telephone skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge of access technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sensitive and empathetic to others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact GVT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Magazine_Format__c</fullName>
        <inlineHelpText>Choose the format of the Volunteer Magazine to be received</inlineHelpText>
        <label>Volunteer Magazine Format</label>
        <picklist>
            <controllingField>Receive_Volunteer_Magazine__c</controllingField>
            <picklistValues>
                <fullName>Braille</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACD (Audio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCD (DAISY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print (Standard 14 point)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Manager_Assigned__c</fullName>
        <description>Select the assigned Volunteer Manager from the User record</description>
        <inlineHelpText>Select the assigned Volunteer Manager from the User record</inlineHelpText>
        <label>Volunteer Manager Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Role_Status__c</fullName>
        <description>Select the volunteer role status</description>
        <inlineHelpText>Select the volunteer role status</inlineHelpText>
        <label>Volunteer Role Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Waitlist_Opportunity_Title__c</fullName>
        <formula>Waitlist_Opportunity__r.Role_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Waitlist Opportunity Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waitlist_Opportunity__c</fullName>
        <label>Waitlist Opportunity</label>
        <referenceTo>Role_Opportunity__c</referenceTo>
        <relationshipLabel>Waitlist Contacts</relationshipLabel>
        <relationshipName>Waitlist_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Witness__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please use this text box the select this contact to be a witness</inlineHelpText>
        <label>Witness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_ccpro__MailingAddressStatus__c</fullName>
        <label>Mailing Address Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not checked</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not matched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsed but not found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambiguous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pw_ccpro__MailingCountryLookup__c</fullName>
        <label>Mailing Country Lookup</label>
        <referenceTo>pw_ccpro__CountryObject__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>MailingContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_ccpro__MailingStateLookup__c</fullName>
        <label>Mailing State Lookup</label>
        <referenceTo>pw_ccpro__State__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>MailingContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_ccpro__MailingZipCodeLookup__c</fullName>
        <label>Mailing Zip/Postal Code Lookup</label>
        <referenceTo>pw_ccpro__ZipCode__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_ccpro__OtherAddressStatus__c</fullName>
        <label>Other Address Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not checked</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not matched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsed but not found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambiguous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pw_ccpro__UtcTimeOffset__c</fullName>
        <formula>IF(AND(MONTH(TODAY()) &gt;=4, MONTH(TODAY()) &lt;=9),

BLANKVALUE(pw_ccpro__MailingZipCodeLookup__r.pw_ccpro__TimeZone__r.pw_ccpro__UtcOffsetMidYear__c, BLANKVALUE(pw_ccpro__MailingStateLookup__r.pw_ccpro__TimeZone__r.pw_ccpro__UtcOffsetMidYear__c, BLANKVALUE(pw_ccpro__MailingCountryLookup__r.pw_ccpro__TimeZone__r.pw_ccpro__UtcOffsetMidYear__c, NULL))), 

BLANKVALUE(pw_ccpro__MailingZipCodeLookup__r.pw_ccpro__TimeZone__r.pw_ccpro__UtcOffset__c, BLANKVALUE(pw_ccpro__MailingStateLookup__r.pw_ccpro__TimeZone__r.pw_ccpro__UtcOffset__c, BLANKVALUE(pw_ccpro__MailingCountryLookup__r.pw_ccpro__TimeZone__r.pw_ccpro__UtcOffset__c, NULL)))

)</formula>
        <inlineHelpText>Shows current time zone offset according to related Zip code, State and/or Country values.  Note that due to variations in DST start/end dates there may be variances.</inlineHelpText>
        <label>UTC Time Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Applicant</fullName>
        <active>true</active>
        <description>Use this record type for the applicant</description>
        <label>Applicant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Counter_signatory</fullName>
        <active>true</active>
        <label>Counter signatory</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>A person that has made one or more customer requests</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reference</fullName>
        <active>true</active>
        <description>Use this record type for references and/or counter signatories</description>
        <label>Reference / Counter Signatory</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referrer</fullName>
        <active>true</active>
        <label>Referrer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff</fullName>
        <active>true</active>
        <description>Use this record type for staff</description>
        <label>Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volunteer</fullName>
        <active>true</active>
        <description>Use this record type for the volunteer</description>
        <label>Volunteer</label>
    </recordTypes>
    <validationRules>
        <fullName>Contact_Details</fullName>
        <active>true</active>
        <description>One field email/phone number/address should be mandatory on a person record</description>
        <errorConditionFormula>IF( 
IF(ISBLANK(Email), 0, 1) + 
IF(ISBLANK(Phone), 0, 1) + 
IF(ISBLANK(HomePhone), 0, 1) +
IF(ISBLANK(MobilePhone), 0, 1) +
IF(ISBLANK(OtherPhone), 0, 1) +
IF(ISBLANK(MailingStreet), 0, 1)
&lt; 1 , true  , false)</errorConditionFormula>
        <errorMessage>One field (email/phone number/mobile number/home number/address street) should be filled in for this person record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Postcode_Validation</fullName>
        <active>false</active>
        <description>Postcodes must contain capitals with one space</description>
        <errorConditionFormula>NOT(

OR(

ISNULL(  MailingPostalCode  ),

REGEX( MailingPostalCode  , &quot;[a-zA-Z]\\d\\s\\d[a-zA-Z]{2}&quot;),

REGEX( MailingPostalCode  , &quot;[a-zA-Z]\\d\\d\\s\\d[a-zA-Z]{2}&quot;),

REGEX( MailingPostalCode  , &quot;[a-zA-Z]{2}\\d\\s\\d[a-zA-Z]{2}&quot;),

REGEX( MailingPostalCode  , &quot;[a-zA-Z]{2}\\d\\d\\s\\d[a-zA-Z]{2}&quot;),

REGEX( MailingPostalCode  , &quot;[a-zA-Z]{2}\\d[a-zA-Z]\\s\\d[a-zA-Z]{2}&quot;),

REGEX( MailingPostalCode  , &quot;[a-zA-Z]\\d[a-zA-Z]\\s\\d[a-zA-Z]{2}&quot;)

)

)</errorConditionFormula>
        <errorMessage>Postcodes must be entered in the correct format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stops_entering_text_in_phone_fields</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
AND(NOT(ISNUMBER(Phone)),
NOT(ISBLANK(Phone))
),
AND(NOT(ISNUMBER(MobilePhone)),
NOT(ISBLANK(MobilePhone))
),
AND(NOT(ISNUMBER(HomePhone)),
NOT(ISBLANK(HomePhone))
),
AND(NOT(ISNUMBER(OtherPhone)),
NOT(ISBLANK(OtherPhone))
)



)</errorConditionFormula>
        <errorMessage>Enter only phone numbers in the Phone fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vol_Enter_reasons_for_wishing_to_retire</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Request_to_Retire__c = TRUE, ISBLANK( Reasons_for_Wishing_to_Retire__c ))</errorConditionFormula>
        <errorDisplayField>Reasons_for_Wishing_to_Retire__c</errorDisplayField>
        <errorMessage>Please enter the reasons for wishing to retire</errorMessage>
    </validationRules>
</CustomObject>